--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.40",
+        "laravel/sanctum": "^2.13",
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "1.0",
         "maatwebsite/excel": "^3.1",
