--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ APP_KEY=base64:VwjwlJNrCp4IId1zYfwpCMe2V1tNwRn32Rhj6EItU+E=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+L5_SWAGGER_CONST_HOST=/api/v1
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
