--- a/.env
+++ b/.env
@@ -11,11 +11,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=34.131.115.70
+DB_HOST=145.14.151.151
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=user1
-DB_PASSWORD=root@123
+DB_DATABASE=u883583531_saransh
+DB_USERNAME=u883583531_saransh
+DB_PASSWORD=Ysoserious@123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
