--- a/.env
+++ b/.env
@@ -11,11 +11,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=145.14.151.151
 DB_PORT=3306
 DB_DATABASE=blood_bank
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=u883583531_saransh
+DB_PASSWORD=Ysoserious@123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
