--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=145.14.151.151
 DB_PORT=3306
-DB_DATABASE=blood_bank
+DB_DATABASE=u883583531_saransh
 DB_USERNAME=u883583531_saransh
 DB_PASSWORD=Ysoserious@123
 
