--- a/.env
+++ b/.env
@@ -45,6 +45,10 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+
+NEXMO_KEY=1f9bf376
+NEXMO_SECRET=69PA1AvkUge37Poz
+
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
