--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "1.0",
         "maatwebsite/excel": "^3.1",
+        "nexmo/laravel": "^3.0",
         "superbalist/laravel-google-cloud-storage": "^2.2"
     },
     "require-dev": {
