--- a/.env
+++ b/.env
@@ -32,10 +32,10 @@ REDIS_PORT=6379
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
+MAIL_PORT=465
 MAIL_USERNAME=testingrealcoderz360@gmail.com
 MAIL_PASSWORD=Shivam@99
-MAIL_ENCRYPTION=tls
+MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS=testingrealcoderz360@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
