--- a/.env
+++ b/.env
@@ -33,10 +33,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
-MAIL_USERNAME=testingrealcoderz360@gmail.com
-MAIL_PASSWORD=Shivam@99
+MAIL_USERNAME=saranshbalyan123@gmail.com
+MAIL_PASSWORD=gnbhvtekeyaqffml
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=testingrealcoderz360@gmail.com
+MAIL_FROM_ADDRESS=saranshbalyan123@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
