--- a/.env
+++ b/.env
@@ -32,10 +32,10 @@ REDIS_PORT=6379
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
-MAIL_PORT=465
+MAIL_PORT=585
 MAIL_USERNAME=saranshbalyan123@gmail.com
 MAIL_PASSWORD=gnbhvtekeyaqffml
-MAIL_ENCRYPTION=ssl
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=saranshbalyan123@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
