--- a/.env
+++ b/.env
@@ -49,6 +49,8 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 NEXMO_KEY=83aa7d3e
 NEXMO_SECRET=sbV4KlQI7XLf4Isq
 
+FCM_SERVER_KEY=AAAAu7Z2EZM:APA91bG7hqAxXbsVpe4LrcBtqBtrl-8ln6L3baZ4gvy7YDTW61fDin5PaSypKPcfP15mhmSSDcKrw_2UVCAz5VR5qQJ8wrUUXPrYIdkmQ-NPLT3cyPsS5TKPI4B8vAgx4NK-DqUkCUQw
+
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
